tests/NormalTests/paczka1/small_fuzzy/27484569.err
Error in line 5: Q9FUW2RUJiM A984 47,0
Error in line 7: Q9FUW2RUJiM S761 7,0
Error in line 9: Q9FUW2RUJiM A983 85,6
Error in line 12: Q9FUW2RUJiM S761 74,6
